--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
   Header
   ============================-->
   <header id="header">
+
+    <div id="topbar">
+      <div class="container">
+        <div class="social-links">
+          <a href="https://www.facebook.com/profile.php?id=100092873344732" class="facebook"><i class="fa fa-facebook"></i></a>
+          <a href="https://www.instagram.com/centruldeingrijire_salento/" class="instagram"><i class="fa fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+
     <div class="container">
 
       <div class="logo float-left">
@@ -64,9 +74,9 @@
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center center-for-img">
         <div class="col-md-6 intro-info order-md-first order-last">
-          <h2>Centru de ingrijiri persoane varstnice <br><br><span>Caminul nostru este casa ta!</span></h2>
+          <h2>Centru de îngrijiri persoane vârstnice <br><br><span>Căminul nostru este casa ta!</span></h2>
           <div>
-            <a href="#about" class="btn-get-started scrollto">Descoperiti</a>
+            <a href="#about" class="btn-get-started scrollto">Descoperiți</a>
           </div>
         </div>
   
@@ -122,7 +132,7 @@
 
         <header class="section-header">
           <h3>Servicii</h3>
-          <p>Iata cateva dintre serviciile noastre!</p>
+          <p>Iată cateva dintre serviciile noastre!</p>
         </header>
 
         <div class="row">
@@ -199,7 +209,7 @@
         
         <header class="section-header">
           <h3>De ce sa ne alegi pe noi?</h3>
-          <p>Iata de ce ar trebui sa ne alegeti pe noi</p>
+          <p>Iată de ce ar trebui sa ne alegeți pe noi</p>
         </header>
 
         <div class="row">
@@ -245,17 +255,17 @@
 
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">12</span>
-            <p>Capacitate maxima</p>
+            <p>Capacitate maximă</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
             <span>24/7</span>
-            <p>Programul cu clientii</p>
+            <p>Programul cu clienții</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
             <span>24/7</span>
-            <p>Programul cu pacientii</p>
+            <p>Programul cu pacienții</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
@@ -275,8 +285,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
-            <h3 class="cta-title">Contacteaza-ne</h3>
-            <p class="cta-text">Daca esti interesat si doresti sa colaboram, ne poti contacta la numarul de telefon: +4 0790 632 823</p>
+            <h3 class="cta-title">Contactează-ne</h3>
+            <p class="cta-text">Dacă ești interesat și dorești să colaborăm, ne poți contacta la numărul de telefon: +40 790 632 823</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#footer">Detalii de contact</a>
@@ -346,7 +356,7 @@
               <li data-filter="*" class="filter-active">Prezentare generala</li>
               <li data-filter=".filter-app">Camere</li>
               <li data-filter=".filter-card">Baie</li>
-              <li data-filter=".filter-web">Camera de zi</li>
+              <li data-filter=".filter-web">Cameră de zi</li>
             </ul>
           </div>
         </div>
@@ -547,8 +557,8 @@
     <section id="team" class="section-bg">
       <div class="container">
         <div class="section-header">
-          <h3>Dotarile noastre</h3>
-          <p>Un lucru important este confortul pe care il oferim rezidentilor</p>
+          <h3>Dotările noastre</h3>
+          <p>Un lucru important este confortul pe care îl oferim rezidenților</p>
         </div>
 
         <div class="row">
@@ -559,7 +569,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Ingrijire 24/7</h4>
-                  <span>Specialisti autorizati</span>
+                  <span>Specialiști autorizați</span>
                 </div>
               </div>
             </div>
@@ -571,7 +581,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Electrocasnice</h4>
-                  <span>Spatiu dotat complet</span>
+                  <span>Spațiu dotat complet</span>
                 </div> 
               </div>
             </div>
@@ -582,8 +592,8 @@
               <img src="img/clean.png" class="img-fluid" style="max-height: 192px;" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Ingrijire personala</h4>
-                  <span>Igiena este prioritara</span>
+                  <h4>Ingrijire personală</h4>
+                  <span>Igiena este prioritară</span>
                 </div> 
               </div>
             </div>
@@ -594,8 +604,8 @@
               <img src="img/social.png" class="img-fluid" style="max-height: 192px;" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Utilitati</h4>
-                  <span>Utilitati sustenabile</span>
+                  <h4>Utilități</h4>
+                  <span>Utilități sustenabile</span>
                 </div> 
               </div>
             </div>
@@ -650,10 +660,16 @@
                       Strada Iederei 38A, Vila 27-28<br>
                       Bragadiru<br>
                       Romania <br>
-                      <strong>Telefon:</strong> 0790 632 823<br>
+                      <strong>Telefon:</strong>+40 790 632 823<br>
                       <!-- <strong>Email:</strong> info@example.com<br> -->
                     </p>
                   </div>
+
+                  <div class="social-links">
+                    <a href="https://www.facebook.com/profile.php?id=100092873344732" class="facebook"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/centruldeingrijire_salento/" class="instagram"><i class="fa fa-instagram"></i></a>
+                  </div>
+
                 </div>
 
             </div>
